# Embedded_Software_Project_Group_6

Platooning/: CMakeLists.txt  PlatoonController.h  TruckNode.cpp  TruckNode.h  VehiclePhysics.h  common.h  main.cpp  network_module.h  truck.cpp  visualizer.py
Use_Cases/: common_use.cpp  mainframe_use.cpp  truck_use.cpp
code with just logic/: main_frame.cpp  truck.cpp
code with just main frame/: common.h  simple_main_frame.cpp  simple_truck.cpp
thanas_truck_4/: common.h  main_frame  main_frame.cpp  simple_main_frame  simple_main_frame.cpp  simple_truck  simple_truck.cpp  simple_udp_listener  simple_udp_listener.cpp  truck  truck.cpp
